--- a/Portofolio/index.html
+++ b/Portofolio/index.html
@@ -21,7 +21,7 @@
 
     <!-- Main About -->
     <section class="bg-1">
-      <div class="head">
+      <div class="head-1">
         <span>About Me</span>
       </div>
       <div class="about">
@@ -29,22 +29,46 @@
           <img src="assets/Profile.png" alt="" width="350px" />
         </div>
         <div class="container-about-text">
-          <span class="head-about">Lorem ipsum dolor sit amet.</span>
+          <span class="head-about head-shadow">My Biodata</span>
           <span class="desk-about"
-            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
-            enim explicabo exercitationem dolorem quam sequi!</span
+            >I am a student at SMKN 1 Ciamis, my name is Ade Nova Wiguna, I live
+            in Ciamis. My friends usually call me Nova.</span
           >
-          <span class="head-about">Lorem ipsum dolor sit amet.</span>
+          <span class="head-about head-shadow">Favorite Thinks</span>
           <span class="desk-about"
-            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
-            enim explicabo exercitationem dolorem quam sequi!</span
+            >I really like listening to music and I also like creating displays
+            on a website, which is also my dream of becoming a front end
+            developer.</span
           >
         </div>
       </div>
     </section>
     <!-- Main Skill -->
 
-    <section class="skill"></section>
+    <section class="bg-2">
+      <div class="head-2">
+        <span>Skils</span>
+      </div>
+
+      <div class="wrap0">
+        <div class="wrap1">
+          <span class="head-2 pb-30px">Programing Language</span>
+          <div class="wrap2">
+            <img src="assets/html.svg" alt="" />
+            <img src="assets/javascript.svg" alt="" />
+            <img src="assets/css-3-logo-svgrepo-com.svg" alt="" />
+            <div class="">
+              <img src="assets/php3-svgrepo-com.svg" alt="" />
+            </div>
+          </div>
+          <span class="head-2 pb-30px">FrameWork</span>
+          <div class="wrap3">
+            <img src="assets/bootstrap-5-1.svg" alt="" />
+            <img src="assets/tailwind-css.svg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Main Quote -->
     <!-- Footer -->
   </body>
