--- a/Portofolio/index.html
+++ b/Portofolio/index.html
@@ -46,25 +46,52 @@
     <!-- Main Skill -->
 
     <section class="bg-2">
-      <div class="head-2">
-        <span>Skils</span>
+      <div class="">
+        <span class="head-2">Skill</span>
       </div>
-
-      <div class="wrap0">
-        <div class="wrap1">
-          <span class="head-2 pb-30px">Programing Language</span>
-          <div class="wrap2">
-            <img src="assets/html.svg" alt="" />
-            <img src="assets/javascript.svg" alt="" />
-            <img src="assets/css-3-logo-svgrepo-com.svg" alt="" />
-            <div class="">
-              <img src="assets/php3-svgrepo-com.svg" alt="" />
+      <div class="skill">
+        <div class="wrap0">
+          <div class="wrap1">
+            <span class="head-2 pb-30px">Programing Language</span>
+            <div class="wrap2">
+              <img src="assets/html.svg" alt="" />
+              <img src="assets/javascript.svg" alt="" />
+              <img src="assets/css-3-logo-svgrepo-com.svg" alt="" />
+              <div class="">
+                <img src="assets/php3-svgrepo-com.svg" alt="" />
+              </div>
+            </div>
+            <span class="head-2 pb-30px">FrameWork</span>
+            <div class="wrap3">
+              <img src="assets/bootstrap-5-1.svg" alt="" />
+              <img src="assets/tailwind-css.svg" alt="" />
             </div>
           </div>
-          <span class="head-2 pb-30px">FrameWork</span>
-          <div class="wrap3">
-            <img src="assets/bootstrap-5-1.svg" alt="" />
-            <img src="assets/tailwind-css.svg" alt="" />
+        </div>
+        <div class="right-skill">
+          <div class="hero-skill">
+            <span class="head-2"> HTML </span>
+            <div class="container-skill html"></div>
+          </div>
+          <div class="hero-skill">
+            <span class="head-2"> Java Script </span>
+            <div class="container-skill js"></div>
+          </div>
+          <div class="hero-skill">
+            <span class="head-2"> CSS </span>
+            <div class="container-skill css"></div>
+          </div>
+          <div class="hero-skill">
+            <span class="head-2"> PHP </span>
+            <div class="container-skill php"></div>
+          </div>
+          <div class="hero-skill">
+            <span class="head-2"> Bootstrap </span>
+            <div class="container-skill bootstrap"></div>
+          </div>
+          <div class="hero-skill">
+            <span class="head-2"> Tailwind </span>
+            <div class="container-skill tailwind"></div>
           </div>
         </div>
       </div>
