memperbaiki text header

--- a/Portofolio/index.html
+++ b/Portofolio/index.html
@@ -46,8 +46,8 @@
     <!-- Main Skill -->
 
     <section class="bg-2">
-      <div class="">
-        <span class="head-2">Skill</span>
+      <div class="head-2 head-hover">
+        <span class="">Skill</span>
       </div>
       <div class="skill">
         <div class="wrap0">
